Added file IO, so that the input file is actually read.

--- a/README.org
+++ b/README.org
@@ -6,3 +6,9 @@ This is my attempt at writing a Lisp in Haskell, because I am bored.
 - Parsec
 ** Optional
 Nothing (yet).
+* Usage
+Compile if needed, and then call
+#+begin_src shell
+  $ popsicle path/to/file
+#+end_src
+And that's it.
